app/skins/_common/common_styles.css
/* ... */
	#nav-secondary li.active li a:hover, #nav-secondary li.active li a:active {color: #c00}
	#nav-secondary li.active li {border: none;margin:0}
	
	#nav-secondary li.active li.active a:link, 
	#nav-secondary li.active li.active a:visited, 
	#nav-secondary li.active li.active a:hover, 
	#nav-secondary li.active li.active a:active {font-weight:bold}

/* SECONDARY NAVIGATION - 3rd TIER */
	#nav-secondary ul ul {margin: 0 0 1em 13px;padding:0}
	#nav-secondary li.active li.active li a, #nav-secondary li.active li.active li a:link, #nav-secondary li.active li.active li a:visited {width:117px}
	#nav-secondary li.active li.active li a:link, 
	#nav-secondary li.active li.active li a:visited, 
	#nav-secondary li.active li.active li a:hover, 
	#nav-secondary li.active li.active li a:active {font-weight:normal}
	#nav-secondary li.active li.active li.active a:link, 
	#nav-secondary li.active li.active li.active a:visited, 
	#nav-secondary li.active li.active li.active a:hover, 
	#nav-secondary li.active li.active li.active a:active {font-weight:bold}

/* SECONDARY NAVIGATION - 4th TIER */
	#nav-secondary ul ul ul {margin: 0 0 1em 13px;padding:0}
	#nav-secondary li.active li.active li.active li a, #nav-secondary li.active li.active li.active li a:link, #nav-secondary li.active li.active li.active li a:visited {width:104px}
	#nav-secondary li.active li.active li.active li a:link, 
	#nav-secondary li.active li.active li.active li a:visited, 
	#nav-secondary li.active li.active li.active li a:hover, 
	#nav-secondary li.active li.active li.active li a:active {font-weight:normal}
	#nav-secondary li.active li.active li.active li.active a:link, 
	#nav-secondary li.active li.active li.active li.active a:visited, 
	#nav-secondary li.active li.active li.active li.active a:hover, 
	#nav-secondary li.active li.active li.active li.active a:active {font-weight:bold}


#left h3, #left h1 {
    width: 100%;
    overflow:hidden;
}

/* Hide the Instant Messenger Iframe */
#IM {
    display: none;
}


/******************************************************************************************
*  MOUSE OVER POPUP                                                                       *
******************************************************************************************/


/* Default DOM Tooltip Style */
div.domTT {
    border: none;
    margin: 0em 0em 2em 0em;
    padding: 0;
}
div.domTTCaption {
    background: #000;
    border: 1px solid #000;
    border-style: solid solid none solid;
    color: #FFF;
    padding: 0em 1em 0em 1em;
    text-transform: none;
    text-decoration: none;
    
    font-size: 1em;
    height: 1em;
    cursor: hand;
}
div.domTTContent {
     background: transparent;
    border-collapse: collapse;
    border: 1px solid #000;
    padding: 3px;
    overflow: auto;
    background: #FFF;
}



/******************************************************************************************
*  END OF MOUSE OVER POPUP                                                                        *
******************************************************************************************/


li.sectionfolder {
    background: transparent url('icons/folder2.gif') no-repeat 0px 1px; 
    padding-left: 20px;
    margin-left: 0px;
}

